# smart-command

./: .gitignore  .plan.md  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  PRODUCT.md  README.md  README_zh.md  install.ps1  install.sh  strings.yaml
.claude/: settings.local.json
.claude/skills/rust-cli/: SKILL.md
.github/workflows/: release.yml
.omc/sessions/: 77e3552a-6432-4048-ac62-4565cc7dacda.json
.omc/state/: autopilot-state.json  setup-state.json
definitions/: awk.yaml  base64.yaml  basename.yaml  bat.yaml  cargo.yaml  cat.yaml  cd.yaml  chmod.yaml  chown.yaml  claude.yaml  codex.yaml  cp.yaml  curl.yaml  cut.yaml  deno.yaml  df.yaml  diff.yaml  dirname.yaml  docker.yaml  du.yaml  echo.yaml  eza.yaml  fd.yaml  find.yaml  gemini.yaml  gh.yaml  git.yaml  go.yaml  grep.yaml  head.yaml  helm.yaml  htop.yaml  jq.yaml  kill.yaml  kubectl.yaml  ln.yaml  ls.yaml  make.yaml  md5sum.yaml  mkdir.yaml  (+38 more)
docs/: RELEASE.md
pkg/homebrew/: smart-command.rb
pkg/scoop/: smart-command.json
scripts/: test_upgrade.sh
src/: active_ai.rs  ai.rs  ai_stream.rs  aliases.rs  argument.rs  bookmarks.rs  cli.rs  command_def.rs  completer.rs  config.rs  context.rs  definitions.rs  error.rs  highlighter.rs  hinter.rs  install.rs  loader.rs  main.rs  output.rs  pipeline.rs  plugins.rs  session.rs  snippets.rs  timer.rs  ui.rs  upgrade.rs  validator.rs  watcher.rs
src/providers/: docker.rs  env.rs  export.rs  git.rs  kubernetes.rs  make.rs  mod.rs  npm.rs  path.rs  process.rs  ssh.rs
