[package]
name = "smart-command"
version = "0.1.0"
edition = "2021"
description = "An intelligent shell with context-aware command completion"
authors = ["kingford"]
license = "MIT"
repository = "https://github.com/kingford/smart-command"
keywords = ["shell", "cli", "completion", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
reedline = "0.38.0"
nu-ansi-term = "0.50.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.27"
regex = "1.10"
dirs = "5.0"
serde_yaml = "0.9.34"
fuzzy-matcher = "0.3"

# CLI Framework with shell completion support
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Configuration management
config = "0.14"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Better error handling
thiserror = "2.0"

[[bin]]
name = "smart-command"
path = "src/main.rs"
