[package]
name = "smart-command"
version = "0.1.0"
edition = "2021"
description = "An intelligent shell with context-aware command completion"
authors = ["kingford"]
license = "MIT"
repository = "https://github.com/kingford/smart-command"
keywords = ["shell", "cli", "completion", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
reedline = "0.38.0"
nu-ansi-term = "0.50.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.27"
regex = "1.10"
dirs = "5.0"
serde_yaml = "0.9.34"
fuzzy-matcher = "0.3"

# CLI Framework with shell completion support
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Configuration management
config = "0.14"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Better error handling
thiserror = "2.0"

# Async runtime for providers
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process", "time", "sync"] }

# File watching for cache invalidation
notify = "6.0"

# SQLite for context storage (optional)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# HTTP client for npm/AI APIs (optional)
reqwest = { version = "0.12", features = ["json"], optional = true }

# LRU cache for providers
lru = "0.12"

# Once cell for lazy statics
once_cell = "1.19"

# Edit distance for typo correction
strsim = "0.11"

[features]
default = ["providers", "highlighting", "context"]
providers = []
highlighting = []
context = ["rusqlite"]
ai = ["reqwest"]
full = ["providers", "highlighting", "context", "ai"]

[[bin]]
name = "smart-command"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "kingford"
copyright = "2024, kingford"
license-file = ["LICENSE", "0"]
extended-description = """
Smart Command is an intelligent shell with context-aware command completion.
Features include fuzzy search, multi-language support, and Git integration.
"""
section = "utility"
priority = "optional"
assets = [
    ["target/release/smart-command", "usr/bin/", "755"],
    ["definitions/*", "usr/share/smart-command/definitions/", "644"],
    ["README.md", "usr/share/doc/smart-command/", "644"],
]
