[package]
name = "smart-command"
version = "0.1.0"
edition = "2021"
description = "An intelligent shell with context-aware command completion"
authors = ["kingford"]
license = "MIT"
repository = "https://github.com/skingford/smart-command"
keywords = ["shell", "cli", "completion", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
reedline = "0.38.0"
nu-ansi-term = "0.50.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.27"
regex = "1.10"
dirs = "5.0"
serde_yaml = "0.9.34"
fuzzy-matcher = "0.3"

# CLI Framework with shell completion support
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Configuration management
config = "0.14"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Better error handling
thiserror = "2.0"

# Async runtime for providers
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process", "time", "sync"] }

# File watching for cache invalidation
notify = "6.0"

# SQLite for context storage (optional)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# HTTP client for npm/AI APIs (optional)
# Use rustls-tls to avoid OpenSSL dependency issues in cross-compilation
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"], optional = true }

# LRU cache for providers
lru = "0.12"

# Once cell for lazy statics
once_cell = "1.19"

# Edit distance for typo correction
strsim = "0.11"

# Version parsing for upgrade
semver = "1.0"


# SHA256 checksum verification
sha2 = "0.10"

# Temp file for upgrade downloads
tempfile = "3"

# Archive extraction for upgrade
flate2 = "1"
tar = "0.4"

[features]
default = ["providers", "highlighting", "context", "upgrade"]
providers = []
highlighting = []
context = ["rusqlite"]
ai = ["reqwest"]
upgrade = ["reqwest"]
full = ["providers", "highlighting", "context", "ai", "upgrade"]

[[bin]]
name = "sc"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "kingford"
copyright = "2024, kingford"
license-file = ["LICENSE", "0"]
extended-description = """
Smart Command (sc) is an intelligent shell with context-aware command completion.
Features include fuzzy search, multi-language support, Git integration, and auto-upgrade.
"""
section = "utility"
priority = "optional"
assets = [
    ["target/release/sc", "usr/bin/sc", "755"],
    ["definitions/*", "usr/share/smart-command/definitions/", "644"],
    ["README.md", "usr/share/doc/smart-command/README.md", "644"],
]
